--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/animejs": "^3.1.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "animejs": "^3.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
