--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.55.0",
     "@types/animejs": "^3.1.12",
     "@types/jsonwebtoken": "^9.0.6",
     "animejs": "^3.2.2",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
